--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,12 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tabler/icons-react": "^3.36.0",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "chartjs-adapter-luxon": "^1.3.1",
     "dotenv": "^17.2.3",
+    "luxon": "^3.7.2",
     "react": "^19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1"
