--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .env
 .env.*
 !.env.example
+secrets.py
+config.json
 
 # ======================
 # Node / Frontend
@@ -13,6 +15,10 @@ dist/
 dist-ssr/
 .vite/
 *.local
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+tsconfig.tsbuildinfo
 
 # ======================
 # Python / Backend
@@ -25,21 +31,35 @@ __pycache__/
 venv/
 env/
 pip-wheel-metadata/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # ======================
 # Database / Local data
 # ======================
 *.sqlite3
 *.db
+*.sql
+!*.sql.example
 
 # ======================
 # Logs
 # ======================
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
 
 # ======================
 # OS / Editor
@@ -48,10 +68,13 @@ pnpm-debug.log*
 Thumbs.db
 .vscode/
 .idea/
+.vs/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+*.swp
+*.swo
 
 # ======================
 # Docker
