--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@mantine/core": "^8.3.10",
     "@mantine/hooks": "^8.3.10",
+    "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@tabler/icons-react": "^3.36.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "chartjs-adapter-luxon": "^1.3.1",
     "dotenv": "^17.2.3",
+    "keycloak-js": "^26.2.2",
     "luxon": "^3.7.2",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
