--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.10",
+    "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.10",
     "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^2.11.2",
