--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.5.1",
     "chartjs-adapter-luxon": "^1.3.1",
     "dotenv": "^17.2.3",
+    "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.2.2",
     "luxon": "^3.7.2",
     "react": "^19.2.3",
