--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,6 @@
     "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.10",
     "@reduxjs/toolkit": "^2.11.2",
-    "@tabler/icons-react": "^3.36.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "chartjs-adapter-luxon": "^1.3.1",
@@ -23,6 +22,7 @@
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1"
   },
