--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/charts": "^8.3.12",
     "@mantine/core": "^8.3.10",
     "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.10",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
-    "chart.js": "^4.5.1",
-    "chartjs-adapter-luxon": "^1.3.1",
     "dotenv": "^17.2.3",
     "luxon": "^3.7.2",
     "react": "^19.2.3",
-    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -36,6 +35,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "react-is": "^19.2.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
