Update: about to integrate a useCase to the chatbot

--- a/intent-classifier-service/requirements.txt
+++ b/intent-classifier-service/requirements.txt
@@ -9,4 +9,5 @@ torch
 transformers
 git+https://github.com/huggingface/parler-tts.git
 scipy
+IndicTransToolkit
 # piper-tts  # Uncomment if using Piper locally
