--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,11 @@
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
-    "luxon": "^3.7.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.1",
-    "recharts": "^3.6.0"
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
