--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/charts": "^8.3.12",
     "@mantine/core": "^8.3.10",
     "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.10",
@@ -21,7 +20,8 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
